--- a/DataLib2/App.config
+++ b/DataLib2/App.config
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
     <add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom_ef7;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
     <add name="Vyzva57" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Vyzva57_ef7;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
 
-    <add name="Container-sqlite" connectionString="Data Source=d:\LMCom\rew\WebCode\App_Data\NewLMCom_sqlite.s3db"/>
-    <add name="Vyzva57-sqlite" connectionString="Data Source=d:\LMCom\rew\WebCode\App_Data\Vyzva57_sqlite.s3db"/>
+    <add name="Container-sqlite" connectionString="Data Source=d:\temp\NewLMCom_sqlite.s3db" providerName="Microsoft.Data.Sqlite"/>
+    <add name="Vyzva57-sqlite" connectionString="Data Source=d:\temp\Vyzva57_sqlite.s3db" providerName="Microsoft.Data.Sqlite"/>
+
+    <add name="TradosDT" connectionString="Data Source=195.250.145.26;Initial Catalog=LMTrados;Persist Security Info=True;User ID=lmcomdatatest;Password=lmcomdatatest" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
