--- a/NewLMComModel/App.config
+++ b/NewLMComModel/App.config
@@ -1,71 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-    
-  </configSections>
-  <connectionStrings>
-    <clear />
-    <add name="Container" connectionString="Data Source=127.0.0.1;initial catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest" providerName="System.Data.SqlClient" />
-    <add name="Vyzva57" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=NewData.Design.Vyzva57;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Vyzva57Container" connectionString="metadata=res://*/Design.Vyzva57.csdl|res://*/Design.Vyzva57.ssdl|res://*/Design.Vyzva57.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=d:\LMCom\rew\Web4\App_Data\vyzva57.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
   <appSettings>
-    <add key="LMComData" value="d:\LMCom\rew\Web4\Schools\Design\" />
-    <add key="BasicPath" value="d:\lmcom\" />
+    <add key="LMComData" value="d:\LMCom\rew\Web4\Schools\Design\"/>
+    <add key="BasicPath" value="d:\lmcom\"/>
   </appSettings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="System.Data.SqlServerCe.4.0" />
-      </parameters>
-    </defaultConnectionFactory>
-    <!--
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="System.Data.SqlServerCe.4.0" />
-      </parameters>
-    </defaultConnectionFactory>
-    -->
-    <providers>
-      <!--
-      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
-      -->
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
-    </providers>
-  </entityFramework>
-  <!--
-<connectionStrings>
-  FE5
-  <add name="Container" connectionString="metadata=res://NewLMComModel/NewData.csdl|res://NewLMComModel/NewData.ssdl|res://NewLMComModel/NewData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=195.250.145.24\MSSQLSERVER,1433;initial catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False&quot;" providerName="System.Data.EntityClient" />
-  LOCAL
-  <add name="Container" connectionString="metadata=res://NewLMComModel/NewData.csdl|res://NewLMComModel/NewData.ssdl|res://NewLMComModel/NewData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=NewLMCom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  CE
-  <add name="Container" connectionString="metadata=res://NewLMComModel/NewData.csdl|res://NewLMComModel/NewData.ssdl|res://NewLMComModel/NewData.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;Data Source=d:\LMCom\rew\Web4\App_Data\NewData.sdf&quot;" providerName="System.Data.SqlServerCe.4.0"/>
-</connectionStrings>
--->
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
