--- a/WebCommon/Properties/launchSettings.json
+++ b/WebCommon/Properties/launchSettings.json
@@ -12,9 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNET_ENV": "Development"
-      },
-      "sdkVersion": "dnx-clr-win-x86.1.0.0-beta8"
+        "Hosting:Environment": "Development"
+      }
     },
     "web": {
       "commandName": "web",
