--- a/WebCommon/project.json
+++ b/WebCommon/project.json
@@ -1,30 +1,28 @@
 {
-  "webroot": "wwwroot",
   "version": "1.0.0-*",
+  "compilationOptions": {
+    "emitEntryPoint": true
+  },
 
   "dependencies": {
-    "Microsoft.Dnx.Runtime": "1.0.0-beta8",
-    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-beta8",
-    "Microsoft.AspNet.Mvc": "6.0.0-beta8",
-    "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta8",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta8",
-    "Microsoft.Framework.Configuration.Json": "1.0.0-beta8",
+    "Microsoft.Dnx.Runtime": "1.0.0-rc1-final",
+    "EntityFramework.Commands": "7.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
     "Newtonsoft.Json": "7.0.1",
-    "WindowsAzure.Storage": "6.1.0",
-    "EntityFramework.Commands": "7.0.0-beta8",
-    "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta8",
-    "Microsoft.Framework.Configuration": "1.0.0-beta8",
-    "Microsoft.AspNet.Diagnostics": "1.0.0-beta8",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta8"
+    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final"
   },
 
   "frameworks": {
     "dnx46": {
       "dependencies": {
-        "EPPlus": "1.0.0-*",
         "LMComLib": "1.0.0-*",
-        "NewLMComModel": "1.0.0-*",
-        "ObjectModel": "1.0.0-*"
+        "DataLib2": "1.0.0-*",
+        "NewLMComModel": "1.0.0-*"
       }
     }
   },
