--- a/DesignTimeLib/DesignTimeLib.csproj
+++ b/DesignTimeLib/DesignTimeLib.csproj
@@ -92,7 +92,9 @@
     <None Include="Licenses\v8.strongtalk.license" />
     <None Include="Licenses\v8.v8.license" />
     <None Include="Licenses\v8.valgrind.license" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Design\jsWebApiProxy\WebApiProxyTempl.tt">
