--- a/ObjectModel/ObjectModel.csproj
+++ b/ObjectModel/ObjectModel.csproj
@@ -80,12 +80,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <Folder Include="Course\Smart\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Course\Smart\" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
