--- a/NewLMComModel/NewLMComModel.csproj
+++ b/NewLMComModel/NewLMComModel.csproj
@@ -166,7 +166,7 @@
   <ItemGroup>
     <Compile Include="DesignNew\DeployConsts.cs" />
     <Compile Include="DesignNew\FileSources.cs" />
-    <Compile Include="DesignNew\Handler.cs" />
+    <Compile Include="DesignNew\SWCache.cs" />
     <Compile Include="DesignNew\TsShared.cs" />
     <Compile Include="Design\CourseMeta.cs" />
     <Compile Include="Runtime\JSCrambler.cs" />
