--- a/TradosLib/TradosLib.csproj
+++ b/TradosLib/TradosLib.csproj
@@ -137,7 +137,9 @@
     <Compile Include="TradosLibNewEA.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LMComLib\LMComLib.csproj">
