pred vyhozenim vseho

--- a/WebCommon/wwwroot/Web.config
+++ b/WebCommon/wwwroot/Web.config
@@ -18,4 +18,7 @@
     </handlers>
     <httpPlatform processPath="%DNX_PATH%" arguments="%DNX_ARGS%" forwardWindowsAuthToken="false" startupTimeLimit="3600" />
   </system.webServer>
+  <system.web>
+    <customErrors mode="Off"/>
+  </system.web>
 </configuration>
