--- a/WebCommon/project.json
+++ b/WebCommon/project.json
@@ -12,14 +12,18 @@
     "Newtonsoft.Json": "7.0.1",
     "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
     "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
+    "EntityFramework.Sqlite": "7.0.0-rc1-final",
+    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
+    "EntityFramework.Core": "7.0.0-rc1-final",
+    "EntityFramework.Relational": "7.0.0-rc1-final"
   },
 
   "frameworks": {
     "dnx46": {
       "dependencies": {
-        "LMComLib": "1.0.0-*",
         "DataLib2": "1.0.0-*",
-        "NewLMComModel": "1.0.0-*"
+        "NewLMComModel": "1.0.0-*",
+        "LMComLib": ""
       }
     }
   },
