--- a/TradosLib/TradosLib.csproj
+++ b/TradosLib/TradosLib.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TradosLib.cs" />
     <Compile Include="TradosLibNewEA.cs" />
+    <Compile Include="Utils\HtmlEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
