--- a/DesignTimeLib/packages.config
+++ b/DesignTimeLib/packages.config
@@ -38,4 +38,5 @@
   <package id="System.Threading" version="4.0.0" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="6.1.0" targetFramework="net451" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net451" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net451" />
 </packages>
