--- a/WebCommon/project.json
+++ b/WebCommon/project.json
@@ -7,9 +7,7 @@
   "dependencies": {
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
-    "EntityFramework.Commands": "7.0.0-rc1-final",
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
-    "Newtonsoft.Json": "7.0.1",
     "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
     "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
     "EntityFramework.Sqlite": "7.0.0-rc1-final",
@@ -21,9 +19,9 @@
   "frameworks": {
     "dnx46": {
       "dependencies": {
-        "DataLib2": "1.0.0-*",
-        "NewLMComModel": "1.0.0-*",
-        "LMComLib": ""
+        "DataLib2": "",
+        "LMComLib": "",
+        "NewLMComModel": ""
       }
     }
   },
