--- a/DesignTimeLib/DesignTimeLib.csproj
+++ b/DesignTimeLib/DesignTimeLib.csproj
@@ -293,6 +293,14 @@
       <Project>{e88c653d-5518-4b96-9b99-6efbd46a9141}</Project>
       <Name>ObjectModel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TheWebServices\Email\Email.csproj">
+      <Project>{03cf58ad-0128-4db8-9ed6-fa6b2ec83aa0}</Project>
+      <Name>Email</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheWebServices\ServiceLib\ServiceLib.csproj">
+      <Project>{6577015c-229d-46c5-a8ec-e1dcbee55bf1}</Project>
+      <Name>ServiceLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TradosLib\TradosLib.csproj">
       <Project>{c47b9422-0488-4ba2-9e3b-d8d83f1ae9f0}</Project>
       <Name>TradosLib</Name>
