--- a/NewLMComModel/packages.config
+++ b/NewLMComModel/packages.config
@@ -6,6 +6,10 @@
   <package id="EntityFramework.Relational.Design" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="iTextSharp" version="5.5.7" targetFramework="net451" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net451" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Configuration" version="1.0.0-rc1-final" targetFramework="net451" />
@@ -23,5 +27,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.0.0-beta-23516" targetFramework="net451" />
   <package id="System.Diagnostics.Tracing" version="4.0.0" targetFramework="net451" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net451" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net451" />
   <package id="System.Threading" version="4.0.0" targetFramework="net451" />
+  <package id="WindowsAzure.Storage" version="6.1.0" targetFramework="net451" />
 </packages>
